Apply quick fix to prevent document scrolling on small screen

--- a/less/fleub.less
+++ b/less/fleub.less
@@ -1,6 +1,6 @@
 // Variables.
 @sidebar: 135px;
-@panel-width: 320px;
+@panel-width: 324px;
 @panel-background: #7a8f94;
 // Fonts.
 @font-face {
