--- a/less/panel.less
+++ b/less/panel.less
@@ -4,6 +4,8 @@
 	position: absolute;
 	left: -230px;
 	z-index: 1;
+	max-height: 350px;
+	overflow-y: scroll;
 }
 .panel.on{
     transition: 0.5s;
